--- a/todo-app/Cargo.toml
+++ b/todo-app/Cargo.toml
@@ -10,7 +10,9 @@ authors.workspace = true
 tokio = { workspace = true }
 axum = { workspace = true }
 hyper = { workspace = true }
+tower = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 mime = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
