--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ authors = ["KOZAKI Tsuneaki <kozaki.tsuneaki@gmail.com>"]
 [workspace.dependencies]
 tokio = { version = "1.26.*", features = ["full"] }
 axum = { version = "0.6.*" }
+axum-macros = { version = "0.3.*"}
 hyper = { version = "0.14.*", features = ["full"] }
 tower = { version = "0.4.*" }
 serde = { version = "1.0.*", features = ["derive"] }
